# auth

./: .env  .gitignore  .upignore  Makefile.toml  README  up.json
client/: .gitignore  Cargo.toml
client/public/: styles.css  test.html
client/src/: lib.rs
migrations/: 20200907000039_create_users.sql
server/: Cargo.toml
server/queries/: create-user.sql  find-user-by-name.sql
server/src/: access_token.rs  authentication.rs  authorize.rs  db.rs  main.rs  signup.rs
server/src/authentication/: password_helper.rs  session.rs  signin.rs  signup.rs
server/templates/: authorize.html  signin.html  signup.html
