[package]
name = "server"
version = "0.1.0"
authors = ["Jeff Lai <winfield301@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
warp = "0.2"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["macros"] }
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
rust-argon2 = "0.8"
rand = "0.7"
