[package]
authors = ["Jeff Lai <winfield301@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = "0.10"
askama_warp = "0.10"
cookie = {version = "0.14", features = ["secure", "key-expansion"]}
dotenv = "0.15.0"
handlebars = "3.0.1"
rand = "0.7"
rand_pcg = "0.2"
rand_seeder = "0.2"
rust-argon2 = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres"]}
tokio = {version = "0.2", features = ["macros"]}
warp = "0.2"
